<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/home"
            android:title="@string/menu_accueil" />
        <item
            android:id="@+id/nav_parametres"
            android:icon="@drawable/acc_settings"
            android:title="@string/menu_parametres" />
    </group>

    <item android:title="CONTACT">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contacts"
                    android:icon="@drawable/acc_contacts"
                    android:title="@string/menu_contact" />
                <item
                    android:id="@+id/nav_position"
                    android:icon="@drawable/acc_map"
                    android:title="@string/menu_position" />
            </group>
        </menu>
    </item>
    <item android:title="INFOS">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_filiere"
                    android:icon="@drawable/acc_filiere"
                    android:title="@string/menu_filiere" />
                <item
                    android:id="@+id/nav_document"
                    android:icon="@drawable/acc_document"
                    android:title="@string/menu_document" />

                <item
                    android:id="@+id/nav_bourse"
                    android:icon="@drawable/acc_bourse"
                    android:title="@string/menu_bourse" />
                <item
                    android:id="@+id/nav_condition"
                    android:icon="@drawable/acc_condition"
                    android:title="@string/menu_condition" />
            </group>
        </menu>
    </item>
</menu>
