<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/fragment_accueil"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".accueil.Accueil_Fragment">

<!-- TODO: Update blank fragment layout -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ofppt_ismo_image" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.3"
    android:background="@color/color_background"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="480dp">

        <TextView
            android:id="@+id/idTextLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_Top_titre_connect"
            android:layout_marginStart="@dimen/start_End_title_login"
            android:layout_marginEnd="@dimen/start_End_title_login"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/edit_login"
            android:textColor="@color/color_login"
            android:textSize="30dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idEditlogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idTextLogin"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/start_End_edit_text_login"
            android:layout_marginTop="@dimen/margin_Top_edit_text_login"
            android:layout_marginEnd="@dimen/start_End_edit_text_login"
            android:alpha="0.7"
            android:background="@drawable/background_color_edit_text"
            android:textColorHint="@color/color_login"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:counterTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_login"
                android:hint="@string/edit_login"
                android:drawableLeft="@drawable/ic_person"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="5dp"
                app:drawableTint="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idEditpassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idEditlogin"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/start_End_edit_text_login"
            android:layout_marginEnd="@dimen/start_End_edit_text_login"
            android:layout_marginTop="@dimen/margin_Top_edit_password"
            android:alpha="0.7"
            android:background="@drawable/background_color_edit_text"
            android:textColorHint="@color/color_login"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:counterTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FFF">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType = "textPassword"
                android:textColor="@color/color_login"
                android:drawableLeft="@drawable/lock"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="5dp"
                app:drawableTint="@android:color/white"
                android:hint="@string/edit_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/idButton"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idEditpassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/start_End_button_login"
            android:layout_marginTop="@dimen/margin_Top_edit_password"
            android:layout_marginEnd="@dimen/start_End_button_login"
            android:background="@drawable/background_btn_connect"
            android:text="@string/btn_connect"
            android:textColor="@color/color_login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin_Top_forget_password"
            android:layout_marginTop="@dimen/margin_Top_forget_password"
            android:layout_marginEnd="@dimen/margin_Top_forget_password"
            android:alpha="0.7"
            android:background="@drawable/background_color_edit_text"
            android:gravity="center">

            <TextView
                android:id="@+id/linkText"
                android:autoLink="web"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textColor="@color/color_login" />


        </LinearLayout>

    </RelativeLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>